security: restrict CORS origins for credentialed requests